feat : accommodation 응답 형식 변경